--- a/nadia.html
+++ b/nadia.html
@@ -4,27 +4,31 @@
     <meta charset="utf-8">
     <title>Nadia's first page</title>
   </head>
-
+<style media="screen">
+  body {background: #fdc2f7; color:darkblue}
+  p {color: green;}
+  .Billy {color:orange;font size }
+</style>
   <body>
-    <p><a href="text.html">Text page</a></p>
-        <p><a href="box.html">Box page</a></p>
-    <h1>my website and stuff</h1>
+    <h1>This is my text page</h1>
     <h2>this is a sub-headline</h2>
     <h3>this is smaller headline</h3>
 
-<p>this is a normal paragraph text and stuff</p>
+<p><a href="text.html">this is my <textarea name="page</a></p>" rows="8" cols="80"></textarea>
+
+<p>this is my text page</p>
 <p>this <strong>text bold</strong></p>
 <p>this is <em>emphasized!!!</em></p>
 <p>this is both <strong><em>emphasized and bold</em></strong></p>
+
+<p>this is text inside a <span
+<p class="Billy">lorem</span> this text is here
+
 
 <hr />
 <p>this is a <a href="https//www.puppies.com">link</a></p>
 <p>this is <em>more emphasized stuff!!!</em></p>
 <h6>This is really small! Also bold!</h6>
 
-
-
-
-
-  </body>
+  body 0
 </html>
