--- a/index.html
+++ b/index.html
@@ -1,30 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Nadia's first page</title>
-  </head>
 
-  <body>
-    <p><a href="text.html">Text page</a></p>
-        <p><a href="box.html">Box page</a></p>
-    <h1>my website and stuff</h1>
-    <h2>this is a sub-headline</h2>
-    <h3>this is smaller headline</h3>
+<head>
+  <meta charset="utf-8">
+  <title>Nadia's first page</title>
+  <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
 
-<p>this is a normal paragraph text and stuff</p>
-<p>this <strong>text bold</strong></p>
-<p>this is <em>emphasized!!!</em></p>
-<p>this is both <strong><em>emphasized and bold</em></strong></p>
+  <style>
+    body {
+      background: #567890;
+      background-image: url(bananas.png);
+      background:linear-gradient:(to top, #7f7fd5. #86a8e7, #91ea);
+      background-repeat:repeat-x;
+      background-position:center center;
+      background-size: cover;
+      background-attachment:fixed;
+      color: #000;
+      font-family: 'Srisakdi', cursive;
+    }
 
-<hr />
-<p>this is a <a href="https//www.puppies.com">link</a></p>
-<p>this is <em>more emphasized stuff!!!</em></p>
-<h6>This is really small! Also bold!</h6>
+    p {
+      font-weight: 90;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    a {
+      color: black;
+      text-decoration: none;
+      display: block;
+      background: #f7ea37;
+      width: 200px;
+      height: 50px;
+      margin: 20px;
+      padding: 10px;
+      text-align: center;
+      border-radius: 20px; border:1px solid #667;
+    }
+
+    a:hover {
+      box-shadow:inset 3px 3px 10px #666
+    }
+
+    a:hover {
+      background: red;
+    }
+
+    a:hover {
+      background: black;
+      color: #fedcba;
+      display: run-in;
+    }
+  </style>
+</head>
+
+<body>
+<ul>
+  <li><a href="text.html">Text page</a></li>
+  <li><a href="box.html">Box page</a></li>
+  <li><a href="box.html">stuff page</a></li>
+</ul>
+  <h1>my website and stuff</h1>
+  <h2>this is a sub-headline</h2>
+  <h3>this is smaller headline</h3>
+
+  <p>this is a normal paragraph text and stuff</p>
+  <p>this <strong>text bold</strong></p>
+  <p>this is <em>emphasized!!!</em></p>
+  <p>this is both <strong><em>emphasized and bold</em></strong></p>
+
+  <hr />
+  <p>this is a <a href="https//www.puppies.com">link</a></p>
+  <p>this is <em>more emphasized stuff!!!</em></p>
+  <h6>This is really small! Also bold!</h6>
 
 
 
 
 
-  </body>
+
+</body>
+
 </html>
