--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <style>
     body {
       background: #567890;
-      background-image: url(bananas.png);
-      background:linear-gradient:(to top, #7f7fd5. #86a8e7, #91ea);
+      background: url(bananas.png), linear-gradient(to right, #7f7fd5, #86a8e7, #91eae4);
+      background-blend-mode:multiply;
       background-repeat:repeat-x;
       background-position:center center;
       background-size: cover;
@@ -33,7 +33,7 @@
       color: black;
       text-decoration: none;
       display: block;
-      background: #f7ea37;
+      background: #91eae4;
       width: 200px;
       height: 50px;
       margin: 20px;
