--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Nadia's first page</title>
   <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico" />
 
   <style>
     body {
