--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <ul>
   <li><a href="text.html">Text page</a></li>
   <li><a href="box.html">Box page</a></li>
-  <li><a href="box.html">stuff page</a></li>
+  <li><a href="images.html">stuff page</a></li>
   <li><a href="tables.html">tables page</a></li>
 </ul>
   <h1>my website and stuff</h1>
