--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 <ul>
   <li><a href="text.html">Text page</a></li>
-  <li><a href="box.html">Box page</a></li>
+  <li><a href="Box.html">Box page</a></li>
   <li><a href="images.html">images page</a></li>
   <li><a href="tables.html">tables page</a></li>
 </ul>
