--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <li><a href="Box.html">Box page</a></li>
   <li><a href="images.html">images page</a></li>
   <li><a href="tables.html">tables page</a></li>
+  <li><a href="seahorse3.html">seahorse page</a></li>
 </ul>
   <h1>my website and stuff</h1>
   <h2>this is a sub-headline</h2>
