--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <ul>
   <li><a href="text.html">Text page</a></li>
   <li><a href="Box.html">Box page</a></li>
-  <li><a href="images.html">images page</a></li>
+  <li><a href="Images.html">images page</a></li>
   <li><a href="tables.html">tables page</a></li>
   <li><a href="seahorse3.html">seahorse page</a></li>
   <li><a href="Umbrella.html">seahorse page</a></li>
