--- a/Umbrellas/Umbrella.html
+++ b/Umbrellas/Umbrella.html
@@ -52,14 +52,14 @@
 
     <article>
     <h1>Komodo Dragon FACTS</h1>
-      <h2>Name</h2>
-      <p>Their came comes from rumors about there being a dragon-like lizard living in the Lesser Sundra Islands. Its Species name is Komodoensis, its Genus is Varanus and its Family is Varabidae.</p>
-      <h2>What is a Komodo Dragon</h2>
-      <p>A Komodo dragon is a large lizard found in the Indonesian islands of Komodo, Rinca, Flores and Gili Motang.</p>
-      <h2>Diet</h2>
-      <p>These large reptiles carnivorous and can eat animals twice their size. in their habitats they</p>
-      <h2>Physical Features</h2>
-      <p>Seahorses have long thin snouts enabling them to probe into nooks and crannies for food. When they find food they suck it up through their snouts like a vacuum cleaner. Their snouts can expand if their prey is larger than the snout. They are not able to chew and have to disintegrate the food as they eat it.</p>
+      <h2>Human Interaction</h2>
+      <p>Komodo dragons are at risk by illegal hunting and loss of habtitat to human settlement. They were often hunted as trophies by big-game hunters and were killed for their skins or feet to make novelties. </p>
+      <h2>venom</h2>
+      <p> Along with other monitor lizards komodo dragons and secrete a venomous poison and fron mouths. Their victioms suffer from low blood pressure and blood loss, sening their prey into a state of shock.</p>
+      <h2>Predators</h2>
+      <p>Komodo dragons are the most dominant predator and most their home islands. Young komdodo dragons prey on smaller animals in the trees such as snakes, lizards, and birds.</p>
+      <h2>Zoo</h2>
+      <p>many zoos around the world have komodo dragons, each year they take care of 100s of baby komodo dragons and some places let people adopt them. </p>
 
       </article>
       </div>
