--- a/Umbrellas/Umbrella2.html
+++ b/Umbrellas/Umbrella2.html
@@ -36,7 +36,7 @@ li a:hover {
 </style>
 <header class="clearfix">
   <h1>seahorse serenity</h1>
-  <img src="#" alt=" seahorse can kick your butt">
+  <img src="#" alt=" Komodo Dragons can kick your butt">
 </header>
 
 <div id="content" class="clearfix">
@@ -44,23 +44,15 @@ li a:hover {
 
 <article>
 <h1>SEAHORSE FACTS</h1>
-  <h2>Name</h2>
-  <p>The Latin name for seahorse is Hippocampus which means "Horse Caterpillar"</p>
-  <h2>What is a Seahorse</h2>
-  <p>Seahorses are fish. They live in water, breath through gills and have a swim bladder. However they do not have caudal fins and have a long snake-like tail. They also have a neck and a snout that points down.</p>
-  <h2>Eyesight</h2>
-  <p>Seahorses have excellent eyesight and their eyes are able to work independently on either side of their head. This means they can look forwards and backwards at the same time! This is particularly useful as they hunt for food by sight.</p>
-  <h2>Snout</h2>
-  <p>Seahorses have long thin snouts enabling them to probe into nooks and crannies for food. When they find food they suck it up through their snouts like a vacuum cleaner. Their snouts can expand if their prey is larger than the snout. They are not able to chew and have to disintegrate the food as they eat it.</p>
-  <h2>Diet</h2>
-  <p>Seahorses eat small crustacea such as Mysis Shrimp. An adult eats 30-50 times a day. Seahorse fry (baby seahorses) eat a staggering 3000 pieces of food per day.</p>
-  <h2>Tail</h2>
-  <p>Seahorses have a prehensile tail. This allows them to grip onto eelgrass and other weeds and prevents them from being washed away by strong currents and waves.</p>
-  <h2>Colour</h2>
-  <p>Seahorses can change colour very quickly and match any surroundings in which it finds itself. They have even been known to turn bright red to match floating debris.</p>
-  <p>Both males and females also change colour during their courtship display.</p>
-  <h2>Body</h2>
-  <p>Unlike most other fish, seahorses have an exoskeleton. Their bodies are made up of hard, external, bony plates that are fused together with a fleshy covering. They do not have scales.</p>
+  <h2>Habitat</h2>
+  <p>on the volcanic islands of indonesia komodo dragons live in the lower forests, grassland, savanna, scrubland and tropical forests. They prefer the hot and dry lands of these places. </p>
+  <h2>Population</h2>
+  <p>There are about 3,000 to 5,000 komodo dragons left in the world. This qualifies them as an endangered species.</p>
+  <h2>Offspring</h2>
+  <p> Komodo dragons mating season happens between the months of May and august. Komodo Dragons lay around 20 eggs and are incubated for seven to eight months. They are laid around september and hatch in April when insects are most abundant. They raise their eggs in abandoned megapode nests (megapode are a type of bird).</p>
+  <h2>Life span</h2>
+  <p> Komodo dragons and vulnerable creatures and tend to hang out in trees. They take 8-9 years to mature and live up to 30 years.</p>
+
   </article>
   </div>
 
