--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <li><a href="Images.html">images page</a></li>
   <li><a href="tables.html">tables page</a></li>
   <li><a href="Seahorse3.html">seahorse page</a></li>
-  <li><a href="Umbrella.html">seahorse page</a></li>
+  <li><a href="Umbrella.html">Umbrella page</a></li>
 </ul>
   <h1>my website and stuff</h1>
   <h2>this is a sub-headline</h2>
