--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <li><a href="tables.html">tables page</a></li>
   <li><a href="Seahorse2.html">seahorse page</a></li>
   <li><a href="Umbrella.html">Umbrella page</a></li>
+    <li><a href="Website/index.html">Final portfolio</a></li>
 </ul>
   <h1>my website and stuff</h1>
   <h2>this is a sub-headline</h2>
