--- a/Website/page1.html
+++ b/Website/page1.html
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content4 cid-rrMPEfu6S4" id="content4-b">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content4 cid-rrMPEfu6S4" id="content4-b">
 
     
 
@@ -666,7 +666,7 @@
             </div>
             <!--Right-->
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
